--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -10,9 +10,6 @@ on:
       - main
       - develop
 
-env:
-  VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
-
 jobs:
   build:
     name: ${{ matrix.os }}-${{ matrix.buildtype }}
@@ -20,67 +17,67 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, windows-2022, macos-13]
-        buildtype: [Debug, Release]
+        os: [ubuntu-22.04, windows-2022]
+        buildtype: [Release]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Export GitHub Actions cache variables
-        uses: actions/github-script@v7
-        with:
-          script: |
-            core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
-            core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
+      - name: Install dependencies (Ubuntu)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            build-essential \
+            cmake \
+            libboost-date-time-dev \
+            libboost-filesystem-dev \
+            libboost-iostreams-dev \
+            libboost-system-dev \
+            libcrypto++-dev \
+            libfmt-dev \
+            libgmp-dev \
+            libluajit-5.1-dev \
+            libmariadb-dev \
+            libpugixml-dev
 
-      - name: Setup vcpkg
+      - name: Setup vcpkg (Windows)
+        if: runner.os == 'Windows'
         uses: lukka/run-vcpkg@v11
         with:
           vcpkgGitCommitId: 'a34c873a9717a888f58dc05571dde15571da8571'
 
-      - name: Get vcpkg triplet
-        id: triplet
-        shell: bash
+      - name: Install dependencies via vcpkg (Windows)
+        if: runner.os == 'Windows'
         run: |
-          if [ "$RUNNER_OS" == "Windows" ]; then
-            echo "triplet=x64-windows" >> $GITHUB_OUTPUT
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-            echo "triplet=x64-osx" >> $GITHUB_OUTPUT
-          else
-            echo "triplet=x64-linux" >> $GITHUB_OUTPUT
-          fi
+          vcpkg install boost-iostreams:x64-windows boost-system:x64-windows boost-filesystem:x64-windows boost-date-time:x64-windows cryptopp:x64-windows fmt:x64-windows libmariadb:x64-windows luajit:x64-windows pugixml:x64-windows
 
-      - name: Install dependencies via vcpkg
-        run: |
-          vcpkg install boost-iostreams:${{ steps.triplet.outputs.triplet }}
-          vcpkg install boost-system:${{ steps.triplet.outputs.triplet }}
-          vcpkg install boost-filesystem:${{ steps.triplet.outputs.triplet }}
-          vcpkg install boost-date-time:${{ steps.triplet.outputs.triplet }}
-          vcpkg install cryptopp:${{ steps.triplet.outputs.triplet }}
-          vcpkg install fmt:${{ steps.triplet.outputs.triplet }}
-          vcpkg install libmariadb:${{ steps.triplet.outputs.triplet }}
-          vcpkg install luajit:${{ steps.triplet.outputs.triplet }}
-          vcpkg install pugixml:${{ steps.triplet.outputs.triplet }}
+      - name: Configure CMake (Linux)
+        if: runner.os == 'Linux'
+        run: cmake -B build -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }}
 
-      - name: Configure CMake
+      - name: Configure CMake (Windows)
+        if: runner.os == 'Windows'
         run: cmake -B build -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }}
 
       - name: Build
         run: cmake --build build --config ${{ matrix.buildtype }}
 
-      - name: Upload artifact (Linux/macOS)
-        if: matrix.buildtype == 'Release' && runner.os != 'Windows'
+      - name: Upload artifact (Linux)
+        if: runner.os == 'Linux'
         uses: actions/upload-artifact@v4
         with:
           name: wolf-project-${{ runner.os }}
           path: build/tfs
           retention-days: 30
+          if-no-files-found: ignore
 
       - name: Upload artifact (Windows)
-        if: matrix.buildtype == 'Release' && runner.os == 'Windows'
+        if: runner.os == 'Windows'
         uses: actions/upload-artifact@v4
         with:
           name: wolf-project-${{ runner.os }}
           path: build/Release/tfs.exe
           retention-days: 30
+          if-no-files-found: ignore
