--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler: [gcc, clang]
+        compiler: [gcc]
         buildtype: [Release]
 
     steps:
@@ -25,6 +25,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo add-apt-repository -y universe
           sudo apt-get update
           sudo apt-get install -y \
             build-essential \
@@ -40,19 +41,6 @@ jobs:
             libmariadb-dev \
             libpugixml-dev
 
-      - name: Setup compiler (GCC)
-        if: matrix.compiler == 'gcc'
-        run: |
-          echo "CC=gcc" >> $GITHUB_ENV
-          echo "CXX=g++" >> $GITHUB_ENV
-
-      - name: Setup compiler (Clang)
-        if: matrix.compiler == 'clang'
-        run: |
-          sudo apt-get install -y clang
-          echo "CC=clang" >> $GITHUB_ENV
-          echo "CXX=clang++" >> $GITHUB_ENV
-
       - name: Configure CMake
         run: |
           mkdir -p build
@@ -65,10 +53,9 @@ jobs:
           make -j$(nproc)
 
       - name: Upload artifact
-        if: matrix.compiler == 'gcc'
         uses: actions/upload-artifact@v4
         with:
-          name: wolf-project-ubuntu-${{ matrix.compiler }}
+          name: wolf-project-ubuntu
           path: build/tfs
           retention-days: 30
           if-no-files-found: ignore
