--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -21,17 +21,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo add-apt-repository -y universe
           sudo apt-get update
           sudo apt-get install -y \
             build-essential \
             cmake \
-            libboost-date-time-dev \
-            libboost-filesystem-dev \
             libboost-iostreams-dev \
             libboost-system-dev \
-            libcrypto++-dev \
-            libfmt-dev \
             libgmp-dev \
             libluajit-5.1-dev \
             libmariadb-dev \
@@ -41,15 +36,15 @@ jobs:
         run: cmake -B build -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
-        run: cmake --build build --config Release -j $(nproc)
+        run: cmake --build build -j $(nproc)
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: wolf-project-Linux
-          path: build/tfs
+          name: wolfserver-linux
+          path: build/wolfserver
           retention-days: 30
-          if-no-files-found: ignore
+          if-no-files-found: warn
 
   build-windows:
     name: Windows
@@ -65,7 +60,8 @@ jobs:
           vcpkgGitCommitId: 'a34c873a9717a888f58dc05571dde15571da8571'
 
       - name: Install dependencies via vcpkg
-        run: vcpkg install boost-iostreams:x64-windows boost-system:x64-windows boost-filesystem:x64-windows boost-date-time:x64-windows cryptopp:x64-windows fmt:x64-windows libmariadb:x64-windows luajit:x64-windows pugixml:x64-windows
+        run: |
+          vcpkg install boost-iostreams:x64-windows boost-system:x64-windows gmp:x64-windows libmariadb:x64-windows luajit:x64-windows pugixml:x64-windows
 
       - name: Configure CMake
         run: cmake -B build -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake"
@@ -76,7 +72,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: wolf-project-Windows
-          path: build/Release/tfs.exe
+          name: wolfserver-windows
+          path: build/Release/wolfserver.exe
           retention-days: 30
-          if-no-files-found: ignore
+          if-no-files-found: warn
