--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -33,7 +33,7 @@ jobs:
             libboost-system-dev \
             libgmp-dev \
             libluajit-5.1-dev \
-            libmariadb-dev \
+            libmysqlclient-dev \
             libpugixml-dev
 
       - name: Configure CMake
