--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,7 +35,7 @@ jobs:
             libboost-system-dev \
             libgmp-dev \
             libluajit-5.1-dev \
-            libmariadb-dev \
+            libmysqlclient-dev \
             libpugixml-dev
 
       - name: Build
