--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -64,10 +64,10 @@ jobs:
 
       - name: Install dependencies via vcpkg
         run: |
-          vcpkg install boost-iostreams boost-system gmp libmysql luajit pugixml
+          vcpkg install boost-iostreams boost-system gmp unofficial-libmysql lua pugixml
 
       - name: Configure CMake
-        run: cmake -B build -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" -DCMAKE_BUILD_TYPE=Release
+        run: cmake -B build -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" -DCMAKE_BUILD_TYPE=Release -DUSE_LUAJIT=OFF
 
       - name: Build
         run: cmake --build build --config Release
