--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -28,10 +28,10 @@ jobs:
 
       - name: Install dependencies via vcpkg
         run: |
-          vcpkg install boost-asio boost-iostreams boost-system gmp libmysql luajit pugixml
+          vcpkg install boost-asio boost-iostreams boost-system gmp libmysql lua pugixml
 
       - name: Configure CMake
-        run: cmake -B build -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" -DCMAKE_BUILD_TYPE=Release
+        run: cmake -B build -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" -DCMAKE_BUILD_TYPE=Release -DUSE_LUAJIT=OFF
 
       - name: Build
         run: cmake --build build --config Release
